--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,11 @@ body {
   font-family: 'Montserrat', sans-serif;
   height: 100vh !important;
 }
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
